--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "com.kongzue.dialogx:DialogX:${dialogx_version}"
 //    implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
