--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,17 @@
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
+    id "com.google.protobuf"  version "0.8.17" apply false
+
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    grpcVersion = "1.47.0"
+    grpcKotlinVersion = "1.3.0"
+    protobufVersion = "3.21.2"
+    coroutinesVersion = "1.6.1"
 }
