--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.fiberfox.fxt">
-
+    <uses-feature android:name="android.hardware.usb.host"
+        android:required="true"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -113,8 +114,13 @@
             android:resource="@xml/file_provider" />
     </provider>
 
-    <service android:name="com.fiberfox.fxt.ble.BLeSerialPortService"
-        android:enabled="true" />
+        <service android:name="com.fiberfox.fxt.ble.BLeSerialPortService"
+            android:enabled="true" />
+
+        <service
+            android:name=".utils.UsbService"
+            android:enabled="true">
+        </service>
     </application>
 
 
