--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        agp_version = '8.2.2'
+        agp_version1 = '8.8.0'
+    }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.application' version '8.8.0' apply false
     id 'com.android.library' version '7.2.2' apply false
-    id "com.google.protobuf"  version "0.8.17" apply false
+    id 'com.google.protobuf' version '0.9.4' apply false
 
 }
 
